--- a/views/layout/layoutTopDashClassroom.ejs
+++ b/views/layout/layoutTopDashClassroom.ejs
@@ -9,7 +9,10 @@
 	</div>
 
 	<div class="illu-classroom">
-		<a href="/profil" class="teacher-name">
-			<p><span><%= teacher.lastName %> <%= teacher.firstName %></span></p>
-		</a>
+		<div class="teach-name-contain">
+			<a href="/profil" class="teacher-name">
+				<p><span><%= teacher.lastName %> <%= teacher.firstName %></span></p>
+			</a>
+			<a href="/deconnexion" class="btn-deco">Se déconnecter</a>
+		</div>
 	</div>
