--- a/public/css/dashPupil.css
+++ b/public/css/dashPupil.css
@@ -224,8 +224,7 @@
 						display: block;
 						border: none;
 						outline: none;
-						border-left: 1px solid #464e59;
-						border-bottom: 2px solid #464e59;
+						border-bottom: 1px solid #464e59;
 						height: 20px;
 						margin-top: 15px;
 						padding-left: 10px;
@@ -239,6 +238,8 @@
 						margin: auto;
 						width: 90%;
 						margin-top: 15px;
+						border: none;
+						outline: none;
 					}
 
 					.add-pupil-form #forms-pupils input[type=submit] {
