--- a/public/css/dashRessource.css
+++ b/public/css/dashRessource.css
@@ -1,6 +1,27 @@
 .dashRessources .middle-content {
-	padding-left: 270px;
+	padding-left: 290px;
 }
+
+	.my-subject {
+		overflow: hidden;
+		position: relative;
+	}
+
+	.overlay {
+		width: 100%;
+		height: 100%;
+		position: absolute;
+		top: 55px;
+		left: 0;
+		background: rgba(255, 255, 255, 0.5);
+		z-index: -1;
+		opacity: 0;
+	}
+
+	.overlay.active {
+		opacity: 1;
+		z-index: 999999;
+	}
 
 	.my-subject-top {
 		background: -moz-linear-gradient(top, #f25764 0%, #f27983 100%); /* FF3.6+ */
@@ -10,18 +31,44 @@
 		background: -ms-linear-gradient(top, #f25764 0%,#f27983 100%); /* IE10+ */
 		background: linear-gradient(to bottom, #f25764 0%,#f27983 100%); /* W3C */
 		height: 55px;
-		padding-top: 15px;
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		box-sizing: border-box;
 	}
-		.my-subject-top p {
+		.my-subject-top > p {
 			color: #fff;
 			margin: 0 0 0px 60px;
 			color: #fff;
 			font-weight: 300;
+			padding-top: 15px;
 			font-size: 20px;
+			float: left;
 		}
+
+			.my-subject-top .activ-ressource {
+				float: right;
+				border-left: 3px solid #fff;
+				height: 100%;
+				padding: 0 25px;
+			}
+
+				.my-subject-top .activ-ressource p,
+				.my-subject-top .activ-ressource span {
+					display: inline-block; 
+					vertical-align: middle;
+				}
+
+				.my-subject-top .activ-ressource p {
+					color: #fff;
+					margin-right: 15px;
+					text-transform: uppercase;
+					font-size: 16px;
+					font-weight: 300;
+				}
+
+				.my-subject-top .link-lock {
+					display: none;
+				}
 
 	.fiche-peda,
 	.activities {
